added styling for counter component

--- a/src/components/counter/counter.styles.scss
+++ b/src/components/counter/counter.styles.scss
@@ -1,6 +1,6 @@
 $small:500px;
 
-.rectangle{
+.counter-holder{
     height: 400px;
     width: 400px;
     display: flex;
@@ -11,7 +11,7 @@ $small:500px;
     margin-bottom: 40px;
 
 
-    .circle{
+    .counter{
       height: 300px;
       width: 300px;
       border-radius: 50%;
